--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -372,7 +372,7 @@
             </div>
         </div>
     </div>
-    <div class="imag mb-10">
+    <div class="imag">
         <div class="container-fluid background-image">
             <div class="row">
                 <div class="col-md-12 text-light">
@@ -402,7 +402,7 @@
             <div class="icons pb-4">
                 <div class="row">
                     <div class="col">
-                <ul>
+                <ul class="p-0 m-0">
                     <a href="#"><li><i class="fa fa-facebook"></i></li></a>
                     <a href="#"><li><i class="fa fa-twitter"></i></li></a>
                     <a href="#"><li><i class="fa fa-youtube"></i></li></a>
