--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -63,11 +63,11 @@
     <!-- NAV BAR END -->
 
     <!-- CAROUSEL BEGIN -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselCaptions" class="carousel" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -96,11 +96,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <a class="carousel-control-prev mx-5" href="#carouselCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <a class="carousel-control-next mx-5" href="#carouselCaptions" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -393,7 +393,7 @@
         <div class="container-fluid text-dark text-center">
             <div class="row">
                 <div class="col">
-                    <p class="copywrite">&copy; Copyright 2020. ODD TECHNOLOGIES (PVT) LTD. All Rights Reserved.
+                    <p class="copywrite">&copy; Copyright 2020. All Rights Reserved. Made by Muhammad Ahmed Ansari
                         <a class="text-dark" href="#"><span class="copyhover">Privacy Policy</span></a>,
                         <a class="text-dark" href="#"><span class="copyhover">Terms & Conditions</span></a>
                     </p>
