--- a/index.html
+++ b/index.html
@@ -5,41 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css_files/style.css">
+    <link rel="stylesheet" href="css_files/bootstrap.css">
     <title>Assignment Files</title>
 </head>
 <body>
     <div class="w3-bar">
-        <p class="profile">
-            <b class="name">Muhammad Ahmed Ansari</b>
-            <br>Roll Number: WM7239
-            <br>Email: ahmedshahzadaaa@gmail.com
-        </p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="text-center">
+                        <p class="name">Muhammad Ahmed Ansari</p>
+                        <p>Roll Number: WM7239</p>
+                        <p>Email: ahmedshahzadaaa@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="links">
-        <a href="Assignment-4/index.html" target="_blank">
-            <button class="button-index">
-                <strong>Fourth Assignment</strong>
-            </button>
-        </a>
-        
-        &nbsp; &nbsp; &nbsp;
-        <a href="Assignment-3/Assignment_3.html">
-            <button class="button-index">
-                <strong>Third Assignment</strong>
-            </button>
-        </a>
-        &nbsp; &nbsp; &nbsp;
-        <a href="Assignment-2/Assignment_2.html">
-            <button class="button-index">
-                <strong>Second Assignment</strong>
-            </button>
-        </a>
-        &nbsp; &nbsp; &nbsp;
-        <a href="Assignment-1/Assignment_1.html">
-            <button class="button-index" target="_blank">
-                <strong>First Assignment</strong>
-            </button>
-        </a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="Assignment-4/index.html" target="_blank">
+                    <button class="button-index">
+                        <strong>Fourth Assignment</strong>
+                    </button>
+                </a>
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="Assignment-3/Assignment_3.html">
+                    <button class="button-index">
+                        <strong>Third Assignment</strong>
+                    </button>
+                </a>
+            </div> 
+        </div>     
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="Assignment-2/Assignment_2.html">
+                    <button class="button-index">
+                        <strong>Second Assignment</strong>
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="Assignment-1/Assignment_1.html">
+                    <button class="button-index" target="_blank">
+                        <strong>First Assignment</strong>
+                    </button>
+                </a>
+            </div>
+        </div>
     </div>
     <hr>
 </body>
