--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 my-3">
+                <a href="Assignment-7/index.html" target="_blank">
+                    <button class="button-index">
+                        <strong>Calculator App</strong>
+                    </button>
+                </a>
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3 my-3">
                 <a href="Assignment-4/index.html" target="_blank">
                     <button class="button-index">
                         <strong>Fourth Assignment</strong>
@@ -36,7 +45,7 @@
             <div class="col-md-3 my-3">
                 <a href="Assignment-3/Assignment_3.html">
                     <button class="button-index">
-                        <strong>Third Assignment</strong>
+                        <strong>Saylani Website</strong>
                     </button>
                 </a>
             </div> 
@@ -45,7 +54,7 @@
             <div class="col-md-3 my-3">
                 <a href="Assignment-2/Assignment_2.html">
                     <button class="button-index">
-                        <strong>Second Assignment</strong>
+                        <strong>A simple form</strong>
                     </button>
                 </a>
             </div>
@@ -54,7 +63,7 @@
             <div class="col-md-3 my-3">
                 <a href="Assignment-1/Assignment_1.html">
                     <button class="button-index" target="_blank">
-                        <strong>First Assignment</strong>
+                        <strong>Periodic table</strong>
                     </button>
                 </a>
             </div>
