--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 my-3">
-                <a href="Assignment-7/index.html" target="_blank">
+                <a href="stopwatch/index.html" target="_blank">
+                    <button class="button-index">
+                        <strong>StopWatch App</strong>
+                    </button>
+                </a>
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3 my-3">
+                <a href="calculator/index.html" target="_blank">
                     <button class="button-index">
                         <strong>Calculator App</strong>
                     </button>
@@ -36,7 +45,7 @@
             <div class="col-md-3 my-3">
                 <a href="Assignment-4/index.html" target="_blank">
                     <button class="button-index">
-                        <strong>Fourth Assignment</strong>
+                        <strong>A sample Website</strong>
                     </button>
                 </a>
             </div>
