--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="calculator.css">
     <title>Calculator</title>
 </head>
 
 <body>
+    <div class="navbar">
+        <div>
+            <a href="../index.html"><button class="back-button"><b>Back</b></button></a>
+            <a class="left">Made with by: Muhammad Ahmed Ansari</a>
+        </div>
+    </div>
     <div class="container">
         <div class="screen">
             <div class="input" id="input"></div>
@@ -40,6 +46,7 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="../../../Java-Assignment/js-Assigment/app.js"></script>
 </body>
 
 </html>
