--- a/index.html
+++ b/index.html
@@ -9,72 +9,92 @@
     <title>Assignment Files</title>
 </head>
 <body>
-    <div class="w3-bar">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="text-center">
-                        <p class="name">Muhammad Ahmed Ansari</p>
-                        <p>Roll Number: WM7239</p>
-                        <p>Email: ahmedshahzadaaa@gmail.com</p>
+    <div class="text-center">
+        <div class="w3-bar">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <div>
+                            <p class="name">Muhammad Ahmed Ansari</p>
+                            <p>Roll Number: WM7239</p>
+                            <p>Email: ahmedshahzadaaa@gmail.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="stopwatch/index.html" target="_blank">
-                    <button class="button-index">
-                        <strong>StopWatch App</strong>
-                    </button>
-                </a>
-            </div>
-        </div> 
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="calculator/index.html" target="_blank">
-                    <button class="button-index">
-                        <strong>Calculator App</strong>
-                    </button>
-                </a>
-            </div>
-        </div> 
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="Assignment-4/index.html" target="_blank">
-                    <button class="button-index">
-                        <strong>A sample Website</strong>
-                    </button>
-                </a>
-            </div>
-        </div> 
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="Assignment-3/Assignment_3.html">
-                    <button class="button-index">
-                        <strong>Saylani Website</strong>
-                    </button>
-                </a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col py-2">
+                <a href="quiz/index.html">
+                        <button class="button-index">
+                            <strong>Quiz App</strong>
+                        </button>
+                    </a>
+                </div>
             </div> 
-        </div>     
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="Assignment-2/Assignment_2.html">
-                    <button class="button-index">
-                        <strong>A simple form</strong>
-                    </button>
-                </a>
+            <div class="row">
+                <div class="col py-2">
+                    <a href="toDoApp/index.html">
+                        <button class="button-index">
+                            <strong>To Do App</strong>
+                        </button>
+                    </a>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col py-2">
+                    <a href="stopwatch/index.html">
+                        <button class="button-index">
+                            <strong>StopWatch App</strong>
+                        </button>
+                    </a>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col py-2">
+                    <a href="calculator/index.html">
+                        <button class="button-index">
+                            <strong>Calculator App</strong>
+                        </button>
+                    </a>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col py-2">
+                    <a href="Assignment-4/index.html" target="_blank">
+                        <button class="button-index">
+                            <strong>A sample Website</strong>
+                        </button>
+                    </a>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col py-2">
+                    <a href="Assignment-3/Assignment_3.html">
+                        <button class="button-index">
+                            <strong>Saylani Website</strong>
+                        </button>
+                    </a>
+                </div> 
+            </div>     
+            <div class="row">
+                <div class="col py-2">
+                    <a href="Assignment-2/Assignment_2.html">
+                        <button class="button-index">
+                            <strong>A simple form</strong>
+                        </button>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 my-3">
-                <a href="Assignment-1/Assignment_1.html">
-                    <button class="button-index" target="_blank">
-                        <strong>Periodic table</strong>
-                    </button>
-                </a>
+            <div class="row">
+                <div class="col py-2">
+                    <a href="Assignment-1/Assignment_1.html">
+                        <button class="button-index" target="_blank">
+                            <strong>Periodic table</strong>
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
